--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
+venv/
+
+*.pyc
+__pycache__/
+
+instance/
+
+.pytest_cache/
+.coverage
+htmlcov/
+
+dist/
+build/
+*.egg-info/
+
 *ipynb_checkpoints
+*.DS_Store
